--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hello Soham</title>
   </head>
   <body>
-    <h1> I am learning everyday Soham !! Testing broser sync </h1>
+    <h1> I am learning everyday Soham !! Testing browser sync </h1>
 
   </body>
 </html>
